Fix white space bug on homepage (#227)

--- a/src/css/component-home-v2.css
+++ b/src/css/component-home-v2.css
@@ -46,6 +46,7 @@
   height: inherit;
   text-decoration: none;
   display: flex;
+  white-space: normal;
   box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.1);
 }
 
